# nbwin

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_STATUS.md  README.md
.claude/: settings.local.json
.github/workflows/: ci.yml
examples/: basic_usage.rs  benchmark_parallel.rs
src/: error.rs  lib.rs  main.rs
src/network/: interface.rs  linux_api.rs  mod.rs  parallel_stats.rs  public_ip.rs  stats.rs  windows_api.rs
src/ui/: app.rs  app_improved.rs  layout.rs  mod.rs
src/ui/widgets/: bandwidth_chart.rs  interface_list.rs  mod.rs
src/utils/: format.rs  mod.rs
