[package]
name = "nbwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Windows network interface detection
winapi = { version = "0.3", features = ["iphlpapi", "netioapi", "ws2def", "ifdef", "ntdef", "minwindef", "sysinfoapi"] }
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock"] }
bytesize = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Terminal UI
crossterm = "0.27"
ratatui = "0.26"
