[package]
name = "nbwin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Common dependencies (cross-platform)
bytesize = "1.3"
anyhow = "1.0"
thiserror = "1.0"
crossterm = "0.27"
ratatui = "0.26"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
# Windows network interface detection
winapi = { version = "0.3", features = ["iphlpapi", "netioapi", "ws2def", "ifdef", "ntdef", "minwindef", "sysinfoapi"] }
windows = { version = "0.52", features = ["Win32_NetworkManagement_IpHelper", "Win32_Foundation", "Win32_Networking_WinSock"] }

[target.'cfg(unix)'.dependencies]
# Linux network interface detection
rtnetlink = "0.14"
tokio = { version = "1.0", features = ["rt", "macros"] }
futures = "0.3"
libc = "0.2"
